@@ -1,16 +1,16 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
 
-inherit user python-r1 autotools git-2
+inherit user python-r1
+inherit autotools git-2
 
 DESCRIPTION="Upload ISOs to Open Virtualization Manager"
 HOMEPAGE="http://gerrit.ovirt.org"
 EGIT_REPO_URI="git://gerrit.ovirt.org/${PN}"
-EGIT_BRANCH="master"
 
 LICENSE="Apache-2.0"
 SLOT="0"
@@ -19,7 +19,7 @@ IUSE=""
 
 RDEPEND="${PYTHON_DEPS}
 	>=dev-python/python-exec-0.3
-	app-emulation/ovirt-engine-sdk"
+	app-emulation/ovirt-engine-sdk-python"
 DEPEND="${RDEPEND}
 	sys-devel/gettext"
 
