@@ -1,3 +1,10 @@
+*ovirt-iso-uploader-3.4.0 (27 Mar 2014)
+
+  27 Mar 2014; Alon Bar-Lev <alonbl@redhat.com>
+  +ovirt-iso-uploader-3.4.0.ebuild, ovirt-iso-uploader-3.2.1.ebuild,
+  ovirt-iso-uploader-9999.ebuild:
+  Version bump + cleanups
+
   18 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-iso-uploader-3.2.1.ebuild,
   ovirt-iso-uploader-9999.ebuild:
   move gettext to DEPEND
